force-app/main/default/objects/gsir_webforms__c/gsir_webforms__c.object-meta.xml
<CustomObject>
    <description>Object controlling all Web Form hosted on GSIR Website.
Call Center, Listing page contact form, Main Contact Form, All marketing and EDM related Forms.</description>
    <label>Web Form</label>
    <nameField>
        <label>Webforms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>