force-app/main/default/objects/gsir_webforms__c/fields/call_center_user_id__c.field-meta.xml
<CustomField>
    <fullName>call_center_user_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Center User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Web_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>