force-app/main/default/objects/gsir_webforms__c/fields/gsir_lead_source_2__c.field-meta.xml
<CustomField>
    <fullName>gsir_lead_source_2__c</fullName>
    <label>Specific Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>