force-app/main/default/objects/gsir_webforms__c/fields/gsir_lead_source__c.field-meta.xml
<CustomField>
    <fullName>gsir_lead_source__c</fullName>
    <description>Predefined Lead Sources</description>
    <label>Main Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agent Internal Referral</fullName>
            </value>
            <value>
                <fullName>Agent Networking</fullName>
            </value>
            <value>
                <fullName>B2B Referral</fullName>
            </value>
            <value>
                <fullName>CCE - Did not probe</fullName>
            </value>
            <value>
                <fullName>Client doenst want to provide</fullName>
            </value>
            <value>
                <fullName>Cold Call - Agent</fullName>
            </value>
            <value>
                <fullName>DIFC Office</fullName>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>External Agent Referral</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>GSIR - Events &amp; Road Shows</fullName>
            </value>
            <value>
                <fullName>GSIR -  Magazine</fullName>
            </value>
            <value>
                <fullName>GulfSIR.com</fullName>
            </value>
            <value>
                <fullName>Gulf SIR Kiosk</fullName>
            </value>
            <value>
                <fullName>Inbound Referral</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>James Edition</fullName>
            </value>
            <value>
                <fullName>Lead Farming - External Data</fullName>
            </value>
            <value>
                <fullName>Lead Farming - Internal Data</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Luxuryestate.com</fullName>
            </value>
            <value>
                <fullName>Mansion Global</fullName>
            </value>
            <value>
                <fullName>Open House</fullName>
            </value>
            <value>
                <fullName>Outbound Referral</fullName>
            </value>
            <value>
                <fullName>Propertyfinder.ae</fullName>
            </value>
            <value>
                <fullName>Propertywifi.com</fullName>
            </value>
            <value>
                <fullName>Rezora.com</fullName>
            </value>
            <value>
                <fullName>Right Move</fullName>
            </value>
            <value>
                <fullName>Signboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>