force-app/main/default/objects/gsir_webforms__c/fields/gsir_project_name__c.field-meta.xml
<CustomField>
    <fullName>gsir_project_name__c</fullName>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>