force-app/main/default/objects/gsir_webforms__c/fields/listing_agent__c.field-meta.xml
<CustomField>
    <fullName>listing_agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Web_Forms_1</relationshipName>
    <type>Lookup</type>
</CustomField>