force-app/main/default/objects/gsir_webforms__c/recordTypes/call_center_web_form.recordType-meta.xml
<RecordType>
    <fullName>call_center_web_form</fullName>
    <active>true</active>
    <label>Call Center Web Form</label>
</RecordType>