force-app/main/default/objects/gsir_webforms__c/recordTypes/Marketing_Form.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Form</fullName>
    <active>true</active>
    <label>Marketing Form</label>
</RecordType>