force-app/main/default/objects/gsir_webforms__c/recordTypes/Newsletter_Form.recordType-meta.xml
<RecordType>
    <fullName>Newsletter_Form</fullName>
    <active>true</active>
    <label>Newsletter Form</label>
</RecordType>